--- a/react-js-personelwebsite/package.json
+++ b/react-js-personelwebsite/package.json
@@ -6,6 +6,9 @@
     "node": ">=12.x"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
